# language-buddy

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
auth/: appwrite_config.py  forms.py  middleware.py  models.py  urls.py  views.py
chats/: chat_service.py  gemini_config.py  urls.py  views.py
language_buddy/: production.py  settings.py  urls.py
templates/: base.html
templates/auth/: forgot_password.html  login.html  profile_setup.html  profile_update.html  reset_password.html  signup.html
templates/chats/: conversation.html
templates/core/: home.html
