[tool.poetry]
name = "language-buddy"
version = "0.1.0"
description = "Language Buddy app built by Sophyia"
authors = ["Sophyia7 <iroegbusophia3@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-tailwind = "^3.8.0"
appwrite = "^7.0.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
google-generativeai = "^0.8.3"
markdown = "^3.7"
python-dateutil = "^2.9.0.post0"


[tool.poetry.group.production.dependencies]
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
